# janky-plane

./: Cargo.toml  readme.md
src/: components.rs  main.rs  resources.rs  systems.rs
src/animation/: components.rs  mod.rs  systems.rs
src/game/: components.rs  mod.rs  systems.rs
src/game/enemies/: mod.rs  systems.rs
src/game/map/: components.rs  environment_maps.rs  mod.rs  systems.rs
src/game/player/: components.rs  mod.rs  systems.rs
src/game/projectiles/: components.rs  mod.rs  systems.rs
src/main_menu/: mod.rs
